```plantuml
@startuml

title Sistema Falcão Sombrio - Diagrama de Classes Inicial

class CentralControle {
    +id: int
    +monitorarDrones()
    +enviarComando()
    +visualizarTelemetria()
}

class Operador {
    +id: int
    +nome: string
    +nivelAcesso: string
}

class Autenticacao {
    +validarBiometria()
    +validarMFA()
}

class Drone {
    +id: int
    +status: string
    +nivelBateria: float
    +executarMissao()
    +enviarTelemetria()
}

class Missao {
    +id: int
    +tipo: string
    +status: string
    +iniciar()
    +finalizar()
}

class SistemaNavegacao {
    +calcularRota()
    +detectarAmeacas()
}

class IA_Navegacao {
    +processarDados()
    +tomarDecisao()
}

class Sensor {
    +status: string
    +coletarDados()
}

class Lidar
class Camera
class GPS

class Telemetria {
    +localizacao: string
    +velocidade: float
    +statusDrone: string
}

class ComunicacaoSegura {
    +protocolo: string
    +criptografarDados()
    +transmitirDados()
}

class AtualizacaoFirmware {
    +versao: string
    +atualizarDrone()
}

class ServidorControle {
    +status: string
}

class ServidorBackup {
    +status: string
    +assumirControle()
}

class BancoDadosDistribuido {
    +replicarDados()
    +armazenarDados()
}

class LogAuditoria {
    +id: int
    +data: datetime
    +evento: string
}

CentralControle "1" -- "*" Drone : gerencia
CentralControle "1" -- "*" Operador : permiteOperacao
Operador "1" -- "1" Autenticacao : realiza

Drone "1" -- "1" SistemaNavegacao : utiliza
SistemaNavegacao "1" -- "1" IA_Navegacao : usa

Drone "1" -- "*" Sensor : possui
Sensor <|-- Lidar
Sensor <|-- Camera
Sensor <|-- GPS

Drone "1" -- "1" ComunicacaoSegura : comunicaCom
Drone "1" -- "1" Telemetria : envia

Drone "1" -- "0..1" Missao : executa
Drone "1" -- "0..1" AtualizacaoFirmware : recebe

ServidorControle "1" -- "1" BancoDadosDistribuido : acessa
ServidorBackup "1" -- "1" BancoDadosDistribuido : replica

BancoDadosDistribuido "1" -- "*" LogAuditoria : armazena
Missao "*" -- "1" BancoDadosDistribuido : registra

@enduml
```
